# QLoRA-Enhanced-Healthcare-LLM

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  docker-compose.yaml  evaluation_report.md  pyproject.toml  requirements-dev.txt  requirements-serve.txt  requirements.txt
api/: __init__.py  main.py  schemas.py
app/: streamlit_app.py
assets/: README.md
data/: __init__.py  preprocessing.py
docs/: ARCHITECTURE.md
evaluation/: __init__.py  evaluate.py  metrics.py
experiments/: __init__.py  tracking.py
notebooks/: train_qlora_colab.ipynb
scripts/: download_base_model.py
src/: __init__.py  config.py  inference.py  model.py  train.py  utils.py
tests/: conftest.py  test_api_schemas.py  test_config.py  test_metrics.py  test_preprocessing.py  test_utils.py
