# ============================================================================
# Tooling configuration. We keep dependency management in requirements*.txt
# (familiar to most ML engineers / CI) and use pyproject.toml only for tool
# configuration: ruff (lint+format), mypy (types) and pytest.
# ============================================================================
[project]
name = "healthcare-qlora"
version = "0.1.0"
description = "Domain-Specific LLM Fine-Tuning using QLoRA and PyTorch (Healthcare)"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "api", "app", "data", "evaluation", "experiments", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
